change-of-image

--- a/index.html
+++ b/index.html
@@ -11,25 +11,25 @@
 </head>
 <body>
 	<div class="container">
-		<div class="panel active" style="background-image: url(./img-cursos/HTML5.jpg);">
+		<div class="panel active" style="background-image: url(./img-cursos/HTML5.webp);">
 			<h3>HTML5 Course </h3>
 		</div>
-		<div class="panel" style="background-image: url(./img-cursos/Css-desde\ 0.jpg);">
+		<div class="panel" style="background-image: url(./img-cursos/Css-desde\ 0.webp);">
 			<h3>CSS course.</h3>
 		</div>
-		<div class="panel" style="background-image: url(./img-cursos/Data-Structures-&-Algorithms-Javascript.jpg);">
+		<div class="panel" style="background-image: url(./img-cursos/Data-Structures-&-Algorithms-Javascript.webp);">
 			<h3>Data Structures & Algorithms Javascript Course </h3>
 		</div>
-		<div class="panel" style="background-image: url(./img-cursos/JavaScript-Moderno-Guia-Definitiva-Construye-15\ Proyectos.jpg);">
+		<div class="panel" style="background-image: url(./img-cursos/JavaScript-Moderno-Guia-Definitiva-Construye-15\ Proyectos.webp);">
 			<h3>Courser Javascript</h3>
 		</div>
-		<div class="panel" style="background-image: url(./img-cursos/Git+GitHub-Todo-un-sistema-de-control-de-versiones-de-cero.jpg);">
+		<div class="panel" style="background-image: url(./img-cursos/Git+GitHub-Todo-un-sistema-de-control-de-versiones-de-cero.webp);">
 			<h3>Course Git+GitHub</h3>
 		</div>
-		<div class="panel" style="background-image: url(./img-cursos/React-La-Guía-Completa-Hooks-Context-Redux-MERN-15\ Apps.jpg);">
+		<div class="panel" style="background-image: url(./img-cursos/React-La-Guía-Completa-Hooks-Context-Redux-MERN-15\ Apps.webp);">
 			<h3>Course ReactJs</h3>
 		</div>
-		<div class="panel" style="background-image: url(./img-cursos/Node-De-cero-a-experto.jpg)">
+		<div class="panel" style="background-image: url(./img-cursos/Node-De-cero-a-experto.webp)">
 			<h3>Course NodeJs</h3>
 		</div>
 		
